Adding link function

--- a/directives/index.html
+++ b/directives/index.html
@@ -10,6 +10,7 @@
   <div ng-controller="DirectiveDemoAppController">
     <h1 hello-user></h1>
     <input type="text" name="name" ng-model="name">
+    <span>{{count}}</span>
   </div>
   <script src="../node_modules/angular/angular.min.js"></script>
   <script src="../directives/app.module.js"></script>
