--- a/directives/index.html
+++ b/directives/index.html
@@ -4,13 +4,21 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>Directives Demo</title>
+  <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-  <div ng-controller="DirectiveDemoAppController">
-    <p>Enter name below:</p>
-    <input type="text" name="name" ng-model="name">
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Demo</a>
+      </div>
+    </div>
+  </nav>
+  <div ng-controller="DirectiveDemoAppController" class="container">
     <div>
+    <p>Enter name below:</p>
+      <input type="text" name="name" ng-model="name">
       <h1 hello-user></h1>
     </div>
     <div>
@@ -18,6 +26,7 @@
       <au-drop-down data="data.countries" display-val="label" ng-model="selectedCountry"></au-drop-down>
       {{selectedCountry}}
     </div>
+    </br>
     <div>
       <span>Select Currency</span>
       <au-drop-down data="data.currencies" display-val="code" ng-model="selectedCurrency"></au-drop-down>
