--- a/filter/index.html
+++ b/filter/index.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Directives Demo</title>
+  <title>Filter Demo</title>
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
