--- a/filter/filter-app.html
+++ b/filter/filter-app.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Filter Demo</title>
+  <title>Directives Demo</title>
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
@@ -38,7 +38,7 @@
             <td>{{employee.fName | uppercase}}</td>
             <td>{{employee.age}}</td>
             <td>{{employee.salary}}</td>
-            <td>{{employee.department | humanReadable}}</td>
+            <td>{{employee.department | camelCase}}</td>
           </tr>
         </tbody>
       </table>
@@ -46,7 +46,7 @@
     <script src="../node_modules/angular/angular.min.js"></script>
     <script src="../filter/filter-app.module.js"></script>
     <script src="../filter/filter-app.controller.js"></script>
-    <script src="../filter/humanReadable.filter.js"></script>
+    <script src="../filter/camelCase.filter.js"></script>
 </body>
 
 </html>
