--- a/filter/index.html
+++ b/filter/index.html
@@ -47,6 +47,7 @@
     <script src="../filter/filter-app.module.js"></script>
     <script src="../filter/filter-app.controller.js"></script>
     <script src="../filter/humanReadable.filter.js"></script>
+    <script src="../filter/capitalize.filter.js"></script>
 </body>
 
 </html>
