--- a/filter/filter-app.html
+++ b/filter/filter-app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="filterDemoApp">
+<html>
 
 <head lang="en">
   <meta charset="UTF-8">
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
-<body>
+<body ng-app="filterDemoApp">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
