adding more demos

--- a/directives/index.html
+++ b/directives/index.html
@@ -32,12 +32,17 @@
       <au-drop-down data="data.currencies" display-val="code" ng-model="selectedCurrency"></au-drop-down>
       {{selectedCurrency}}
     </div>
+    </br>
+    <!-- <au-table data="data.currencies"></au-table>
+ -->
   </div>
   <script src="../node_modules/angular/angular.min.js"></script>
   <script src="../directives/app.module.js"></script>
   <script src="../directives/app.controller.js"></script>
   <script src="../directives/hello.directive.js"></script>
   <script src="../directives/au-dropDown.directive.js"></script>
+  <script src="../directives/au-table.directive.js"></script>
+  <script src="../directives/humanReadable.filter.js"></script>
 </body>
 
 </html>
