--- a/promises/index.html
+++ b/promises/index.html
@@ -15,8 +15,10 @@
    </div>
    <div>
       <ul class = "nav navbar-nav">
-         <li ng-class="{ active: isActive('/')}"><a href="#demo1">Demo1</a></li>
-         <li ng-class="{ active: isActive('/demo2')}"><a href ="#demo2">Demo2</a></li>
+         <li ng-class="{ active: isActive('/')}"><a href="#demo1">Promise Need</a></li>
+         <li ng-class="{ active: isActive('/demo2')}"><a href ="#demo2">Promise Example</a></li>
+         <li ng-class="{ active: isActive('/demo3')}"><a href ="#demo3">Resolve Example</a></li>
+         <li ng-class="{ active: isActive('/demo4')}"><a href ="#demo4">Parallel Calls</a></li>
       </ul>
    </div>
 </nav>
@@ -32,7 +34,8 @@
   <script src="../promises/promise-app.controller.js"></script>
   <script src="../promises/demo1.controller.js"></script>
   <script src="../promises/demo2.controller.js"></script>
-
+  <script src="../promises/demo3.controller.js"></script>
+  <script src="../promises/demo4.controller.js"></script>
 </body>
 
 </html>
